# rodrunner

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  config.json  main.py  mkdocs.yml  pyproject.toml  test_complete_workflow.py  test_filesystem.py  test_irods_client.py  test_irods_connection.py  test_parsers.py  test_workflow.py
docker/: Dockerfile  docker-compose.yml
docs/: index.md  readthedocs.md
docs/about/: CHANGELOG.md  changelog.md  license.md
docs/api-reference/: api-endpoints.md  filesystem.md  irods-client.md  parsers.md  workflows.md
docs/development/: contributing.md  docker.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/sequencers/: miseq.md  novaseq.md  other.md
docs/user-guide/: api.md  filesystem.md  irods-client.md  overview.md  parsers.md  workflows.md
irods_prefect/: config.py
irods_prefect/api/: dependencies.py  main.py
irods_prefect/irods/: client.py  exceptions.py  metadata.py  query.py
irods_prefect/models/: config.py  irods.py  sequencer.py
irods_prefect/parsers/: factory.py  runinfo.py  runparameters.py  samplesheet.py
irods_prefect/sequencers/: base.py  miseq.py  novaseq.py
irods_prefect/tasks/: filesystem.py  irods.py  notifications.py  parsing.py
irods_prefect/workflows/: ingest.py  metadata.py
rodrunner/: config.py
rodrunner/api/: dependencies.py  main.py  main_simple.py
rodrunner/filesystem/: find.py  utils.py
rodrunner/irods/: client.py  metadata.py  query.py
rodrunner/models/: config.py  irods.py  (+1 more)
tests/: README.md  conftest.py  test_main.py
(+45 files in other folders)
